# LMS

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py  schemas.py
docs/: compliance-checklist.md  requirements.md
tests/: test_app.py
