[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

